// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creates a header 1`] = `
VFile {
  "contents": "---
date updated: '2010-06-10T00:20:00+02:00'

---

No Header
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Creates date first time 1`] = `
VFile {
  "contents": "---
date updated: '2010-06-10T00:20:00+02:00'

---

No Header
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Does not create a header 1`] = `
VFile {
  "contents": "No Header
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Does not modify date 1`] = `
VFile {
  "contents": "---
date updated: '1999-06-10T00:20:00+02:00'

---
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Maintains properties in header 1`] = `
VFile {
  "contents": "---
title: Example
list:
  - oneX
  - 0
  - false
date updated: '2010-06-10T00:20:00+02:00'

---

# What the Semantic Web ignores

The Web is not only about facts,
It's about humans communicating all sorts of things.
In their own language, with their own model of the world.

perhaps 1% ? of the humans use it for facts?
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Respects hash 1`] = `
VFile {
  "contents": "---
tag: '#Interpretability'
date updated: '2010-06-10T00:20:00+02:00'

---
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
